Added capability to view by tunings.

--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -31,7 +31,8 @@
                 <span style="float: left">
                     <a href="#{r(:view_tunes)}">Tunes |</a>
                     <a href="#{r(:index)}">Books |</a>
-                    <a href="#{r(:view_authors)}">Authors</a>
+                    <a href="#{r(:view_authors)}">Authors |</a>
+                    <a href="#{r(:view_tunings)}">Tunings</a>
                 </span>
             </div>
         </div>
