--- a/view/view_tunes.xhtml
+++ b/view/view_tunes.xhtml
@@ -1,9 +1,11 @@
-<dl id='tune_block'>
-    <?r @tunes.each do | tune | ?>
-        <dt>
-            <a href="#{r(:view_tune)}/#{tune[:id]}">#{tune.title}</a>
-        </dt>
+<ul id='tune_block'>
+    <?r @tunes.each_with_index do | tune, i | ?>
+    <?r if i == 0 ?>
+            <li class="first"}> <a href="#{r(:view_tune)}/#{tune[:id]}">#{tune.title}</a> </li>
+        <?r else ?>
+            <li class=#{((i%2)==0) ? "\"even\"" : "\"odd\""}> <a href="#{r(:view_tune)}/#{tune[:id]}">#{tune.title}</a> </li>
+        <?r end ?>
     <?r end ?>
-</dl>
+</ul>
 
 
