--- a/view/view_tune.xhtml
+++ b/view/view_tune.xhtml
@@ -1,5 +1,5 @@
 <h2>#{@tune.title}</h2>
-<table id='books_block' border="1">
+<table class='books_block' border="1">
     <?r @tune.book_tune_tunings.each do | btt | ?>
         <tr>
             <td>#{btt.tuning.tuning} </td>
