--- a/view/view_tunes.xhtml
+++ b/view/view_tunes.xhtml
@@ -1,4 +1,4 @@
-<ul id='tune_block'>
+<ul class='tune_block'>
     <?r @tunes.each_with_index do | tune, i | ?>
     <?r if i == 0 ?>
             <li class="first"}> <a href="#{r(:view_tune)}/#{tune[:id]}">#{tune.title}</a> </li>
