--- a/view/view_tuning.xhtml
+++ b/view/view_tuning.xhtml
@@ -1,5 +1,5 @@
 <h2>#{@tuning.tuning}</h2>
-<table id='tune_block' border="1">
+<table class='tune_block' border="1">
     <tr><th>Book</th><th>Tune</th><th>Page</th></tr>
     <?r @tuning.book_tune_tunings.each do | btt | ?>
         <tr>
