--- a/view/view_tunings.xhtml
+++ b/view/view_tunings.xhtml
@@ -1,9 +1,9 @@
-<dl id='tuning_block'>
-    <?r @tunings.each do | tuning | ?>
-        <dt>
-            <a href="#{r(:view_tuning)}/#{tuning[:id]}">#{tuning.tuning}</a>
-        </dt>
+<ul class='tuning_block'>
+    <?r @tunings.each_with_index do | tuning, i | ?>
+        <?r if i == 0 ?>
+            <li class="first"> <a href="#{r(:view_tuning)}/#{tuning[:id]}">#{tuning.tuning}</a> </li>
+        <?r else ?>
+            <li class=#{((i%2)==0) ? "\"even\"" : "\"odd\""}> <a href="#{r(:view_tuning)}/#{tuning[:id]}">#{tuning.tuning}</a> </li>
+        <?r end ?>
     <?r end ?>
-</dl>
-
-
+</ul>
