--- a/view/view_author.xhtml
+++ b/view/view_author.xhtml
@@ -1,9 +1,11 @@
 <h2>Books by #{@author.first_name} #{@author.last_name}</h2>
-<dl id='book_block'>
-    <?r @author.books.each do | book | ?>
-        <dt>
-            <a href="#{r(:view_book)}/#{book[:id]}">#{book.title}</a>
-        </dt>
+<dl class='author_book_block'>
+    <?r @author.books.each_with_index do | book, i | ?>
+        <?r if i == 0 ?>
+            <dt class="first"> <a href="#{r(:view_book)}/#{book[:id]}">#{book.title}</a></dt>
+        <?r else ?>
+            <dt class=#{((i%2)==0) ? "\"even\"" : "\"odd\""}> <a href="#{r(:view_book)}/#{book[:id]}">#{book.title}</a></dt>
+        <?r end ?>
     <?r end ?>
 </dl>
 
