--- a/public/css/page.css
+++ b/public/css/page.css
@@ -33,7 +33,7 @@ dl.author_book_block, dl.book_block, ul.tuning_block, ul.author_block, ul.tune_b
     border-radius: 1em  1em  0em  0em;
 }
 
-.author_book_block dt.even, .book_block dt.even, .tuning_block li.even, .author_block li.even, .tune_block li.even { 
+.author_book_block dt.even, .book_block dd.even, .book_block dt.even, .tuning_block li.even, .author_block li.even, .tune_block li.even { 
     background-color: #9DA9EE; 
     padding-left: 2.0em;
     padding-top: .50em;
