--- a/public/css/page.css
+++ b/public/css/page.css
@@ -22,7 +22,23 @@ dl.author_book_block, dl.book_block, ul.tuning_block, ul.author_block, ul.tune_b
     margin-top: 1em;
 }
 
-.author_book_block dt.first, .book_block dd.first, .tuning_block li.first, .author_block li.first, .tune_block li.first { 
+table.books_block {
+    border-collapse: collapse;
+}
+
+.books_block th {
+    padding-left: 1.0em;
+    text-align: left;
+    border-width: 1;
+    border-style: none;
+}
+
+.books_block tr, .books_block td {
+    border-style: none;
+    padding-left: 1.0em;
+}
+
+.books_block tr.first, .author_book_block dt.first, .book_block dd.first, .tuning_block li.first, .author_block li.first, .tune_block li.first { 
     background-color: #9DA9EE; 
     padding-left: 2.0em;
     padding-top: .50em;
@@ -33,14 +49,14 @@ dl.author_book_block, dl.book_block, ul.tuning_block, ul.author_block, ul.tune_b
     border-radius: 1em  1em  0em  0em;
 }
 
-.author_book_block dt.even, .book_block dd.even, .book_block dt.even, .tuning_block li.even, .author_block li.even, .tune_block li.even { 
+.books_block tr.even, .author_book_block dt.even, .book_block dd.even, .book_block dt.even, .tuning_block li.even, .author_block li.even, .tune_block li.even { 
     background-color: #9DA9EE; 
     padding-left: 2.0em;
     padding-top: .50em;
     padding-bottom: .50em;
 }
 
-.author_book_block dt.odd, .book_block dd.odd, .book_block dt.odd, .tuning_block li.odd, .author_block li.odd, .tune_block li.odd { 
+.books_block tr.odd, .author_book_block dt.odd, .book_block dd.odd, .book_block dt.odd, .tuning_block li.odd, .author_block li.odd, .tune_block li.odd { 
     background-color: #DDD; 
     padding-left: 2.0em;
     padding-top: .50em;
