--- a/view/view_tune.xhtml
+++ b/view/view_tune.xhtml
@@ -1,14 +1,27 @@
 <h2>#{@tune.title}</h2>
-<table class='books_block' border="1">
-    <?r @tune.book_tune_tunings.each do | btt | ?>
-        <tr>
-            <td>#{btt.tuning.tuning} </td>
-            <td><a href="#{r(:view_book)}/#{btt.book[:id]}">#{btt.book.title}</a></td> 
-            <td>
-                <?r btt.book.authors.each do | author | ?>
-                        <a href="#{r(:view_author)}/#{author[:id]}">#{author.first_name} #{author.last_name}</a>
-                <?r end ?>
-            </td>
-        </tr>
+<table class='books_block' >
+    <tr> <th>Tuning</th><th>Book</th><th>Author</th> </tr>
+    <?r @tune.book_tune_tunings.each_with_index do | btt, i | ?>
+            <?r if i == 0 ?>
+                <tr class="first">
+                    <td>#{btt.tuning.tuning} </td>
+                    <td><a href="#{r(:view_book)}/#{btt.book[:id]}">#{btt.book.title}</a></td> 
+                    <td>
+                        <?r btt.book.authors.each do | author | ?>
+                                <a href="#{r(:view_author)}/#{author[:id]}">#{author.first_name} #{author.last_name}</a>
+                        <?r end ?>
+                    </td>
+                </tr>
+            <?r else ?>
+                <tr class=#{((i%2)==0) ? "\"even\"" : "\"odd\""}>
+                    <td>#{btt.tuning.tuning} </td>
+                    <td><a href="#{r(:view_book)}/#{btt.book[:id]}">#{btt.book.title}</a></td> 
+                    <td>
+                        <?r btt.book.authors.each do | author | ?>
+                                <a href="#{r(:view_author)}/#{author[:id]}">#{author.first_name} #{author.last_name}</a>
+                        <?r end ?>
+                    </td>
+                </tr>
+            <?r end ?>
     <?r end ?>
 </table>
