--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -8,6 +8,8 @@
         what's set in the associated method.
         -->
         #{css 'page'}
+        #{css 'zp-compressed'}
+        #{css 'zp-print'}
 
         <!-- Our jQuery is in the public/js directory -->
         <script src="/js/jquery-1.3.2.js" type="text/javascript"></script>
@@ -25,26 +27,29 @@
         <meta name="date" content="#{Time.now.iso8601}" />
     </head>
     <body>
-        <div id="header">
-            <h1><a href="#{r(:index)}">The Old-Time Banjo Tab List Project</a></h1>
-            <div id="nav">
-                <span style="float: left">
-                    <a href="#{r(:view_tunes)}">Tunes |</a>
-                    <a href="#{r(:index)}">Books |</a>
-                    <a href="#{r(:view_authors)}">Authors |</a>
-                    <a href="#{r(:view_tunings)}">Tunings</a>
-                </span>
+        <div class="zp-wrapper">
+            <div class="zp-70">
+                <div id="header">
+                    <h1><a href="#{r(:index)}">The Old-Time Banjo Tab List Project</a></h1>
+                    <div id="nav">
+                        <span style="float: left">
+                            <a href="#{r(:view_tunes)}">Tunes |</a>
+                            <a href="#{r(:index)}">Books |</a>
+                            <a href="#{r(:view_authors)}">Authors |</a>
+                            <a href="#{r(:view_tunings)}">Tunings</a>
+                        </span>
+                    </div>
+                </div>
+
+                <div id="content">
+                    #@content
+                </div>
+
+                <!-- Set the footer in the center of the screen. -->
+                <div id="footer" style="text-align: center;">
+                    <h5> Created by SteamCode </h5>
+                </div>
             </div>
-        </div>
-
-
-        <div id="content">
-            #@content
-        </div>
-
-        <!-- Set the footer in the center of the screen. -->
-        <div id="footer" style="text-align: center;">
-            <h5> Created by SteamCode </h5>
         </div>
     </body>
 </html>
